--- a/素馨花卉/index.html
+++ b/素馨花卉/index.html
@@ -43,7 +43,7 @@
 <!--轮播图开始-->
     <div class="banner-box">
             <div class="banner">
-                <img src="img/banner.jpg" alt="">
+                <img src="img/banner.JPG" alt="">
                 <div class="dots">
                         <div class="dot hover"></div>
                         <div class="dot"></div>
