--- a/小米官网/Xiaomi.html
+++ b/小米官网/Xiaomi.html
@@ -61,34 +61,36 @@
             <ul class="search-list">
                 <li class="search-item">
                     小米手机
-                    <div class="item-detail"></div>
                 </li> <li class="search-item">
                     红米
-                <div class="item-detail"></div>
                 </li></li> <li class="search-item">
                     电视
-                <div class="item-detail"></div>
-                </li></li> <li class="search-item">
+                </li>
+                </li> <li class="search-item">
                     笔记本
-                <div class="item-detail"></div>
-                </li></li> <li class="search-item">
+                </li>
+                </li> <li class="search-item">
                     家电
-                <div class="item-detail"></div>
-                </li></li> <li class="search-item">
+                </li>
+                </li> <li class="search-item">
                     新品
-                <div class="item-detail"></div>
-                </li></li> <li class="search-item">
+                </li>
+                </li> <li class="search-item">
                     路由器
-                <div class="item-detail"></div>
-                </li></li> <li class="search-item">
+                </li>
+                </li> <li class="search-item">
                     智能硬件
-                <div class="item-detail"></div>
-                </li></li> <li class="search-item">
+                </li>
+                </li>
+                <li class="search-item">
                     服务
-                </li></li> <li class="search-item">
+                </li>
+                </li> <li class="search-item">
                     社区
                 </li>
+                <div class="item-detail"></div>
             </ul>
+
             <div class="search-input">
                 <input type="text" placeholder="小米手机"><!--用来定义输入框默认的文字-->
                 <div class="search-logo">
@@ -394,8 +396,11 @@
                                 <s>2199元</s>
                             </div>
                             <div class="up-box">
-                                <h3>已安装好了，是不是很气派</h3>
-                                <p>来自于&nbsp;孙利&nbsp;的评价</p>
+                                <div class="up-box-desc">
+                                    <h3>已安装好了，是不是很气派</h3>
+                                    <p>来自于&nbsp;孙利&nbsp;的评价</p>
+                                </div>
+
                             </div>
                         </li>
                         <li class="list-item">
