--- a/素馨花卉/about.html
+++ b/素馨花卉/about.html
@@ -11,33 +11,36 @@
 <body>
 
 <!--素馨花卉导航开始-->
-<header class="sx-header continner">
-    <div class="sx-nav">
-        <div class="sx-logo">
-            <img src="img/sx-logo.png" alt="">
-        </div>
-        <div class="sx-head-right">
-            <ul class="sx-list">
-                <li class="list-item">
-                    <a href="index.html">网站首页</a>
+<header>
+    <div class="sx-header continner">
+        <div class="sx-nav">
+            <div class="sx-logo">
+                <img src="img/sx-logo.png" alt="">
+            </div>
+            <div class="sx-head-right">
+                <ul class="sx-list">
+                    <li class="list-item">
+                        <a href="index.html">网站首页</a>
+                    </li> <li class="list-item ">
+                    <a href="item1.html">花言花语</a>
                 </li> <li class="list-item ">
-                <a href="item1.html">花言花语</a>
-            </li> <li class="list-item ">
-                <a href="item2.html">素馨动态</a>
-            </li> <li class="list-item">
-                <a href="">淘宝商城</a>
-            </li> <li class="list-item">
-                <a href="item3.html">素馨花艺</a>
-            </li> <li class="list-item">
-                <a href="item4.html">留言建议</a>
-            </li> <li class="list-item">
-                <a href=""  id="active">关于素馨</a>
-            </li>
-            </ul>
+                    <a href="item2.html">素馨动态</a>
+                </li> <li class="list-item">
+                    <a href="">淘宝商城</a>
+                </li> <li class="list-item">
+                    <a href="item3.html">素馨花艺</a>
+                </li> <li class="list-item">
+                    <a href="item4.html">留言建议</a>
+                </li> <li class="list-item">
+                    <a href=""  id="active">关于素馨</a>
+                </li>
+                </ul>
+            </div>
         </div>
-    </div>
 
+    </div>
 </header>
+
 <!--素馨花卉导航结束-->
 
 <!--轮播图开始-->
