--- a/小米官网/Xiaomi.html
+++ b/小米官网/Xiaomi.html
@@ -681,13 +681,15 @@
                             </ul>
                         </div>
                     </div>
-                </li> <li class="content-item">
+                </li>
+                <li class="content-item">
                     <h3>图书</h3>
                     <div class="content-item-middle">
                         <div class="content-btn">
                             <div class="content-btn-left">
                                 <i class="iconfont icon-xiangzuo1"></i>
-                            </div><div class="content-btn-right">
+                            </div>
+                            <div class="content-btn-right">
                             <i class="iconfont icon-xiangyou1"></i>
                         </div>
                         </div>
