--- a/素馨花卉/index.html
+++ b/素馨花卉/index.html
@@ -76,14 +76,14 @@
         </div>
         <div class="flower-content">
             <div class="content-img">
-                <!--<div class="btn">-->
-                    <!--<div class="btn-left">-->
-                        <!--<i class="iconfont icon-07jiantouxiangzuofill"></i>-->
-                    <!--</div>-->
-                    <!--<div class="btn-right">-->
-                        <!--<i class="iconfont icon-07jiantouxiangyoufill"></i>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="btn">
+                    <div class="btn-left">
+                        <i class="iconfont icon-07jiantouxiangzuofill"></i>
+                    </div>
+                    <div class="btn-right">
+                        <i class="iconfont icon-07jiantouxiangyoufill"></i>
+                    </div>
+                </div>
                 <ul class="content-img-list">
                     <li class="img-list-item">
                         <img src="img/hualan1.jpg" alt="">
