--- a/素馨花卉/item4.html
+++ b/素馨花卉/item4.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="textarea">
                         <div>
-                            <textarea name="" id="" rows="5" placeholder="您的建议" class="input" ></textarea>
+                            <textarea name="" id="" rows="5" placeholder="您的建议" class="input" style="resize: none" ></textarea>
                         </div>
                     </div>
                     <div class="form-group">
