--- a/素馨花卉/index.html
+++ b/素馨花卉/index.html
@@ -41,26 +41,29 @@
 <!--素馨花卉导航结束-->
 
 <!--轮播图开始-->
+<div class="Banner">
     <div class="banner-box">
-            <div class="banner">
-                <img src="img/banner.JPG" alt="">
-                <div class="dots">
-                        <div class="dot hover"></div>
-                        <div class="dot"></div>
-                        <div class="dot"></div>
-                </div>
-                <div class="bd-left">
+        <div class="banner">
+            <img src="img/banner.JPG" alt="">
+            <div class="dots">
+                <div class="dot hover"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+            <div class="bd-left">
                     <span>
                         <i class="iconfont icon-zuo1"></i>
                     </span>
-                </div>
-                <div class="bd-right">
+            </div>
+            <div class="bd-right">
                      <span>
                         <i class="iconfont icon-you" aria-hidden="true"></i>
                     </span>
-                </div>
             </div>
+        </div>
     </div>
+</div>
+
 <!--轮播图结束-->
 
 <!--素馨花艺开始-->
