--- a/素馨花卉/about.html
+++ b/素馨花卉/about.html
@@ -72,7 +72,7 @@
 </div>
 <!--素馨花卉工作室结束-->
 <!--底部开始-->
-<footer class="footer-box continner">
+<footer class="footer-box">
     <div class="footer-logo">
         <i class="iconfont icon-weixin weixin"></i>
         <i class="iconfont icon-qq qq"></i>
