--- a/素馨花卉/item2.html
+++ b/素馨花卉/item2.html
@@ -174,7 +174,7 @@
     </div>
 </section>
 <!--底部开始-->
-<footer class="footer-box continner">
+<footer class="footer-box">
     <div class="footer-logo">
         <i class="iconfont icon-weixin weixin"></i>
         <i class="iconfont icon-qq qq"></i>
