--- a/素馨花卉/item3.html
+++ b/素馨花卉/item3.html
@@ -107,7 +107,7 @@
 </div>
 <!--内容结束-->
 <!--底部开始-->
-<footer class="footer-box continner">
+<footer class="footer-box">
     <div class="footer-logo">
         <i class="iconfont icon-weixin weixin"></i>
         <i class="iconfont icon-qq qq"></i>
