--- a/小米官网/Xiaomi.html
+++ b/小米官网/Xiaomi.html
@@ -1595,6 +1595,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="footbox container">
         <div class="footer-bottom container">
             <img src="img/logo-footer.png" alt="">
             <div class="footer-bottom-right">
@@ -1642,12 +1644,10 @@
                 <img src="img/v-logo-3.png" alt="">
                 <img src="img/v-logo-4.png" alt="">
             </div>
-            <div class="bottom-text ">
-                探索黑科技，小米为发烧而生！
-            </div>
         </div>
-
-
+    </div>
+    <div class="bottom-text ">
+        探索黑科技，小米为发烧而生！
     </div>
 <!--底部结束-->
 </body>
